# mpd_client

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: state_changes.rs
mpd_client/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
mpd_client/examples/: state_changes.rs
mpd_client/src/: errors.rs  filter.rs  lib.rs  state_changes.rs  tag.rs
mpd_client/src/client/: connection.rs  mod.rs
mpd_client/src/commands/: command_list.rs  definitions.rs  mod.rs  util_macros.rs
mpd_client/src/commands/responses/: list.rs  mod.rs  playlist.rs  song.rs  sticker.rs
mpd_client/src/responses/: count.rs  list.rs  mod.rs  playlist.rs  song.rs  sticker.rs  storage_item.rs  timestamp.rs
mpd_protocol/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
mpd_protocol/.github/workflows/: rust.yml
mpd_protocol/benches/: .gitignore  parse_response.rs
mpd_protocol/fuzz/: .gitignore  Cargo.toml
mpd_protocol/fuzz/fuzz_targets/: sync_connect.rs  sync_receive.rs
mpd_protocol/src/: codec.rs  command.rs  connection.rs  filter.rs  lib.rs  macros.rs  parser.rs  response.rs  sync.rs
mpd_protocol/src/command/: argument.rs
mpd_protocol/src/response/: error.rs  frame.rs  mod.rs  parser.rs
mpd_protocol/tests/: command.rs  decoder.rs  encoder.rs  full_interaction.rs  parser.rs
src/: client.rs  errors.rs  filter.rs  lib.rs  state_changes.rs  tag.rs  util.rs
src/client/: mod.rs
src/commands/: command_list.rs  definitions.rs  mod.rs  responses.rs
src/commands/responses/: list.rs  mod.rs  playlist.rs  song.rs  util_macros.rs
