[package]
name = "mpd_client"
version = "0.7.0"
edition = "2021"
description = "Asynchronous user-friendly MPD client"
repository = "https://github.com/elomatreb/mpd_client"
keywords = ["mpd", "async", "client"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd_protocol = { version = "0.13.0", features = ["async"], path = "../mpd_protocol" }
tokio = { version = "1.0.1", features = ["rt", "net", "time", "sync", "macros"] }
futures-core = "0.3"
tracing = "0.1.13"
chrono = { version = "0.4.11", default-features = false, features = ["std"] }
bytes = "1.0.1"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt", "net", "sync", "macros"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
tokio-test = "0.4.0"
