[package]
name = "mpd_client"
version = "1.3.0"
edition = "2021"
description = "Asynchronous user-friendly MPD client"
repository = "https://github.com/elomatreb/mpd_client"
keywords = ["mpd", "async", "client"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.33", default-features = false, features = [
    "std",
], optional = true }
mpd_protocol = { version = "1.0.2", features = [
    "async",
], path = "../mpd_protocol" }
tokio = { version = "1.35.1", features = [
    "rt",
    "net",
    "time",
    "sync",
    "macros",
] }
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5.0"
tokio-test = "0.4.3"
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
