[package]
name = "mpd_protocol"
version = "0.13.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of MPD client protocol"
repository = "https://github.com/elomatreb/mpd_client"
readme = "README.md"
keywords = ["mpd", "protocol", "client"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]

[dependencies]
bytes = "1.1.0"
tokio = { version = "1.16.1", features = ["io-util"], optional = true }
tracing = "0.1.35"
ahash = "0.7.6"

[dependencies.nom]
version = "7.1.0"
default-features = false
features = ["std"]

[dev-dependencies]
tokio = { version = "1.16.1", features = ["io-util", "rt", "rt-multi-thread", "macros", "net"] }
futures = "0.3.17"
assert_matches = "1.5.0"
criterion = "0.3.5"
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "parse_response"
harness = false
