[package]
name = "mpd_protocol"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of MPD client protocol"
repository = "https://github.com/elomatreb/mpd_client"
readme = "README.md"
keywords = ["mpd", "protocol", "client"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]

[dependencies]
ahash = "0.8.3"
bytes = "1.4.0"
nom = "7.1.3"
tokio = { version = "1.28.1", features = ["io-util"], optional = true }
tracing = "0.1.37"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.3.5"
tokio = { version = "1.28.1", features = ["io-util", "rt", "rt-multi-thread", "macros", "net"] }
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "parse_response"
harness = false
