[package]
name = "mpd_protocol"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of MPD client protocol"
repository = "https://github.com/elomatreb/mpd_client"
readme = "README.md"
keywords = ["mpd", "protocol", "client"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]

[dependencies]
ahash = "0.8.9"
bytes = "1.5.0"
nom = "7.1.3"
tokio = { version = "1.36.0", features = ["io-util"], optional = true }
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5.1"
tokio = { version = "1.36.0", features = [
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-test = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "parse_response"
harness = false
